--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="google-site-verification" content="-V7J4PVs0r5ernD94yZKbRtLH6MU_5BNx632f5UdIxw" />
+    <meta name="yandex-verification" content="0c6d19ad865cc8c1" />
+    <meta name="DESCRIPTION" content="Сайт психологической помощи в москве, помощь в различных ситуациях">
+    <meta name="KEYWORDS" content="психолог, психология, помощь, самооценка, пережить измену, в москве, психологическая помощь, мозгоправ">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Анастасия Росташинская</title>
