--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Russian">
+    <meta property="og:title" content="Психолог Анастасия Росташинская">
+    <meta property="og:site_name" content="Анастасия Росташинская">
+    <meta property="og:url" content="index.html">
+    <meta property="og:description" content="Психолог Москва, Россия">
     <meta name="google-site-verification" content="-V7J4PVs0r5ernD94yZKbRtLH6MU_5BNx632f5UdIxw" />
     <meta name="yandex-verification" content="0c6d19ad865cc8c1" />
     <meta name="DESCRIPTION" content="Сайт психологической помощи в москве, помощь в различных ситуациях">
