--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Психолог Анастасия Росташинская">
     <meta property="og:site_name" content="Анастасия Росташинская">
     <meta property="og:url" content="index.html">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <meta property="og:description" content="Психолог Москва, Россия">
     <meta name="google-site-verification" content="-V7J4PVs0r5ernD94yZKbRtLH6MU_5BNx632f5UdIxw" />
     <meta name="yandex-verification" content="0c6d19ad865cc8c1" />
