--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
     <meta name="KEYWORDS" content="психолог, психология, помощь, самооценка, пережить измену, в москве, психологическая помощь, мозгоправ">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <!-- Google Tag Manager -->
     <script>
         (function(w, d, s, l, i) {
